--- a/guifi.css
+++ b/guifi.css
@@ -1,12 +1,26 @@
 #guifi td.nick, #guifi td.distance, #guifi td.radio, #guifi td.mode, #guifi td.contact, #guifi td.angle, #guifi td.azimuth, #guifi td.nodename, #guifi td.zonename, #guifi td.contact {
   text-decoration: none;
 }
+
+.maintainer-item {
+  margin-top: 0em;
+  margin-bottom: 0em;
+  border: 0em;
+  float: left;
+}
+
+.maintainer-item >  .form-item {
+  float: left;
+  margin-top: 0em;
+  margin-bottom: 0em;
+} 
+
 #guifi th.Online, td.Online, th.Working, td.Working, td.Up {
   background-color: #33FF00; color: black;
   text-decoration: none;
   text-align: right;
 }
-#guifi th.Reserverd, td.Reserved {
+#guifi th.Reserved, td.Reserved {
   background-color: white; color: black;
   text-decoration: none;
   text-align: right;
@@ -123,6 +137,28 @@
   border-bottom: 1px solid #ccc;
 }
 
+#guifi table.guifi_stats, td.num {
+  text-align: right;
+  font-size: 0.8em;
+}
+#guifi table.guifi_stats, td.kms {
+  text-align: right;
+}
+#guifi table.guifi_stats, td.tnum {
+  text-align: right;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+#guifi table.guifi_stats, td.tkms {
+  text-align: right;
+  font-weight: bold;
+}
+/*
+#guifi form.zone_form, div.form-item {
+  float: left;
+  margin-right: 1em;
+}
+*/
 /* The main calendar widget.  DIV containing a table. */
 
 div.calendar { position: relative; }
